[package]
name = "mqtt-rs"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
serde = "1"
bytes = "0.5"
byteorder = "1"