[package]
name = "mqtt-broker"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
mqtt-codec = { version = "0.1.0", path = "../mqtt-codec" }
serde = "1"
bytes = "0.5"
byteorder = "1"
anyhow = "1.0"
thiserror = "1.0"
dashmap = "4.0.0-rc6"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
regex = "1"
